<resources>
    <string name="app_name">Office Hours</string>
    <string name="Open">Open</string>
    <string name="Close">Close</string>
    <string name="search_hint">Search for Professors</string>
    <string name="profList">Professors</string>
    <string name="settings">Settings</string>
    <string name="profLoginText1">Professor Login</string>
    <string name="profEmailEditText1">Email</string>
    <string name="profPasswordEditText2">Password</string>
    <string name="profLoginTextButton">Login</string>
    <string name="mgrWelcomeText">Welcome</string>
    <string name="mgrWaitlist">Student Waitlist</string>
    <string name="mgrInOffice">In Office</string>
    <string name="mgrBusy">Busy</string>
    <string name="mgrOutOffice">Out of Office</string>
    <string name="mgrNotifyStudent">Notify Next Student</string>
    <string name="mgrStatusTitle">Manually Change Status</string>
    <string name="title_activity_professor_page">ProfessorPage</string>
    <string name="student_name">Student Name</string>
    <string name="student_topic">Topic</string>
</resources>
