<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="tmb.csci412.wwu.officehours.LoginActivity">


    <TextView
        android:id="@+id/loginTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="50dp"

        android:text="@string/profLoginText1"
        android:textColor="@color/colorBlack"
        android:textSize="20sp"
        android:textStyle="bold"

        tools:layout_editor_absoluteX="119dp"
        tools:layout_editor_absoluteY="46dp"

        app:layout_constraintBottom_toTopOf="@+id/loginEmailInput"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <EditText
        android:id="@+id/loginEmailInput"
        android:layout_width="300dp"
        android:layout_height="50dp"

        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="30dp"

        android:hint="@string/profEmailEditText1"
        android:inputType="textEmailAddress"

        app:layout_constraintBottom_toTopOf="@+id/loginPassInput"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/loginTitle"


        />

    <EditText
        android:id="@+id/loginPassInput"
        android:layout_width="300dp"
        android:layout_height="50dp"

        android:layout_marginBottom="24dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"

        android:hint="@string/profPasswordEditText2"
        android:inputType="textPassword"

        app:layout_constraintBottom_toTopOf="@+id/loginButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/loginEmailInput"


         />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_centerHorizontal="true"

        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"

        android:onClick="onLogin"
        android:text="@string/profLoginTextButton"


        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/loginPassInput"


        />
</android.support.constraint.ConstraintLayout>