<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="tmb.csci412.wwu.officehours.ManageHoursActivity">

    <TextView
        android:id="@+id/mgrTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="50dp"

        android:text="@string/mgrWelcomeText"
        android:textColor="@color/colorBlack"
        android:textSize="20sp"
        android:textStyle="bold"

        tools:layout_editor_absoluteX="119dp"
        tools:layout_editor_absoluteY="46dp"

        app:layout_constraintBottom_toTopOf="@+id/mgrStatusTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />


    <TextView
        android:id="@+id/mgrStatusTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"

        android:text="@string/mgrStatusTitle"
        android:textColor="@color/colorBlack"
        android:textSize="14sp"
        android:textStyle="bold"

        app:layout_constraintBottom_toBottomOf="@id/mgrTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mgrTitle"/>

    <TextView
        android:id="@+id/mgrWaitlist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"

        android:text="@string/mgrWaitlist"
        android:textColor="@color/colorBlack"
        android:textSize="14sp"
        android:textStyle="bold"

        app:layout_constraintBottom_toBottomOf="@+id/mgrNotifyButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/onlineSwitch"/>

    <Button
        android:id="@+id/mgrNotifyButton"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:layout_centerHorizontal="true"
        android:backgroundTint="@color/vapor_seagreen"

        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"

        android:text="@string/mgrNotifyStudent"


        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintVertical_bias="1"

        />

    <Switch
        android:id="@+id/onlineSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Go Online  "
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/mgrStatusTitle"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"

        />


</android.support.constraint.ConstraintLayout>